--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
 
     </head>
-    <body>
+    <body style="background-color:hsl(0, 0%, 20%);">
         <img style="width: 100%; height: 100%; object-fit: contain;" src="downstairs_cover.jpeg" alt="Magz1lla cover art"></img>
     </body>
 </html>
